--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,38 @@
     text-align: center;
     margin-top: 10px;
 }
+
+.hidden {
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateX(-100px);
+    transition: all 1s;
+}
+
+.show {
+    opacity: 1;
+    filter: blur(0px);
+    transform: translateX(0px);
+}
+
+/* @media(prefers-reduced-motion) {
+    .hidden {
+        transition: none;
+    }
+} */
+
+  .logos {
+  display: flex;
+  }
+
+ .logo:nth-child(1) {
+  transition-delay: 200ms;
+ }
+
+ .logo:nth-child(2) {
+  transition-delay: 400ms;
+ }
+
+ .logo:nth-child(3) {
+  transition-delay: 600ms;
+ }
