--- a/styles.css
+++ b/styles.css
@@ -19,24 +19,20 @@
     transform: translateX(0px);
 }
 
-/* @media(prefers-reduced-motion) {
+@media(prefers-reduced-motion) {
     .hidden {
         transition: none;
     }
-} */
+}
 
   .logos {
   display: flex;
   }
 
- .logo:nth-child(1) {
+ .logo:nth-child(2) {
   transition-delay: 200ms;
  }
 
- .logo:nth-child(2) {
-  transition-delay: 400ms;
- }
-
  .logo:nth-child(3) {
-  transition-delay: 600ms;
+  transition-delay: 400ms;
  }
