--- a/styles.css
+++ b/styles.css
@@ -1,39 +1,39 @@
-@import url('https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap");
 
 #nameOnNav {
-    font-family: 'Crimson Text', serif;
-    text-align: center;
-    margin-top: 10px;
-    font-size: 30px;
+  font-family: "Crimson Text", serif;
+  text-align: center;
+  margin-top: 10px;
+  font-size: 30px;
 }
 
 .hidden {
-    opacity: 0;
-    filter: blur(5px);
-    transform: translateX(-100px);
-    transition: all 1s;
+  opacity: 0;
+  filter: blur(5px);
+  transform: translateX(-100px);
+  transition: all 1s;
 }
 
 .show {
-    opacity: 1;
-    filter: blur(0px);
-    transform: translateX(0px);
+  opacity: 1;
+  filter: blur(0px);
+  transform: translateX(0px);
 }
 
-@media(prefers-reduced-motion) {
-    .hidden {
-        transition: none;
-    }
-}
-
-  .logos {
-  display: flex;
+@media (prefers-reduced-motion) {
+  .hidden {
+    transition: none;
   }
+}
 
- .logo:nth-child(2) {
+.logos {
+  display: flex;
+}
+
+.logo:nth-child(2) {
   transition-delay: 200ms;
- }
+}
 
- .logo:nth-child(3) {
+.logo:nth-child(3) {
   transition-delay: 400ms;
- }
+}
